style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');


/* RESET */
*, *::after, *::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

img{
    display: block;
    box-sizing: border-box;
    height: auto;
}

input, textarea, button {
    font: inherit;
}

.nowrap{
    white-space: nowrap;
}
/* VARIABLES */
:root{
    /* FONTS */
    --FONT-FAMILY: 'Inter', sans-serif;
    --FONT-COLOR-1: #ffffff;
    --FONT-COLOR-2: #101111;



    /* COLORS */
    --BG-1: #101111;
    --BG-2: #ffffff;
    --SECONDARY-LINE: #565656;
    --SECONDARY-1: #638596;
    --SECONDARY-2: #c4ebff;


    /* PADDINGS, MARGINS, BORDERS */

}


html{
    background: var(--BG-2);
    color: var(--FONT-COLOR-1);
    /* padding: 10px 20px 20px; */
}

body{
    min-height: 100vh;
    background: var(--BG-2);
    color: var(--BG-2);
    font-family: var(--FONT-FAMILY);
    /* padding: 10px 20px 20px; */
}

header, .hero, .section-one, .section-three{
    background: var(--BG-1);
}

footer{
    background: var(--BG-1);
    color: var(--FONT-COLOR-1);
}

hr{
    display: block;
    border: none;
    background: var(--SECONDARY-LINE);
    height: 1px;
    width: 90%;
    margin: 10px auto;
}

h1, h2, h3, h4, p{
    font-family: var(--FONT-FAMILY)
}

p{
    font: clamp(8px, 5vw, 24px)
}

/* HAMBURGER MENU */
.header-title-line{
    padding: 0.25rem 0.5rem;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
}

.menu-button{
    background-color: transparent;
    border: none;
    width: 48px;
    height: 48px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

.menu-icon, .menu-icon::before, .menu-icon::after {
    background-color: var(--BG-2);
    width: 30px;
    height: 4px;
    /* border-radius: 5px; */
    position: absolute;
    transition: all 0.5s;
}

.menu-icon::before, .menu-icon::after{
    content: "";
}

.menu-icon::before{
    transform: translate(-15px, -10px);
}

.menu-icon::after{
    transform: translate(-15px, 10px);
}

:is(header:hover, header:focus-within) .menu-icon{
    background-color: transparent;
    transform: rotate(360deg);
}

:is(header:hover, header:focus-within) .menu-icon::before{
    transform: translateX(-15px) rotate(45deg);
}

:is(header:hover, header:focus-within) .menu-icon::after{
    transform: translateX(-15px) rotate(-45deg);
}

:is(header:hover, header:focus-within) nav{
    display: block;
}

nav{
    background-color: var(--BG-1);
    display: none;
    transform-origin: top center;
    animation: showMenu 0.5s ease-in-out forwards;
}

@keyframes showMenu {
    0% {
        transform: scaleY(0);
    }

    80% {
        transform: scaleY(1.2);
    }

    100% {
        transform: scaleY(1);
    }
}

nav ul{
    list-style-type: none;
    display: flex;
    flex-flow: column nowrap;
}

nav li{
    padding: 0.5rem;
    /* border-top: 1px solid var(--SECONDARY-LINE); */
}

nav a{
    display: block;
    text-align: center;
    width: 80%;
    margin: auto;
}

nav button{
    display: block;
    text-align: center;
    width: 80%;
    /* margin-left: 5px;
    margin-right: 5px; */
    margin: auto;
}

nav a:any-link{
    color: var(--SECONDARY-2);
    font-weight: bold;
    text-decoration: none;
}

nav a:hover, nav a:focus, nav button:focus, nav button:hover{
    transform: scale(1.2);
    transition: all 0.3s;
}


.section-one, .section-two, .section-three{
    padding: 35px 20px 50px 20px;
}


.section-two{
    background: var(--BG-2);
    color: var(--FONT-COLOR-2);
    
}

.section-one{
    display: block;
    border: none;
    border-bottom-left-radius: 25px;
    border-bottom-right-radius: 25px;
    text-align: center;
    
}

.section-three{
    display: block;
    border: none;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;

}


button{
    /* border: none; */
    border-radius: 999px;
    padding: 10px;
    font-family: inherit;
    height: auto;
}


.btn-one{
    background: var(--SECONDARY-1);
    color: var(--SECONDARY-2);
}

.hero-header, .hero-text{
    text-align: center;
}

.hero-header{
    font-size: clamp(24px, 6vw, 60px);
    line-height: 1.35;
    /* padding: 6.75%; */
    font-weight: normal;
    

    padding-top: 6.75%;
    /* padding-bottom: ; */
    padding-right: 6.75%;
    padding-left: 6.75%;
}

.hero-text{
    font-size: clamp(12px, 2vw, 30px);
    /* padding: 3%; */

    /* padding-top: 3%; */
    margin-top: 3%;
    margin-bottom: 5%;
    padding-bottom: 3%;
    padding-right: 3%;
    padding-left: 3%;
}

.mint-btn{
    display: block;
    margin: 0 auto;
    padding: 4px;
    border: none;
    height: 40px;
    width: 145px;
}


/* CAROUSEL */
.hero-row{
    width: 100%;
    display: flex;
    overflow-x: auto;
}

.hero-row::-webkit-scrollbar{
    display: none;
}

.hero-carousel{
    display: flex;
    align-items: center;
    justify-content: center;
    animation: spin 15s infinite linear;
    margin-top: 80px;
    margin-bottom: 50px;
}

.hero-row img{
    flex: 0 0 5em;
    height: auto;
    width: 110px;
    margin: 3px;
}

@keyframes spin{
    from {translate: 0;}
    to {translate: -100%;}
}

.article-link-group{
    display: flex;
    flex-flow: column;
    justify-content: center;
}

.article-link{
    /* display: block; */
    border: 2px solid var(--SECONDARY-LINE);
    border-radius: 30px;
    padding: 17px;
    margin: 4% auto;
    max-width: 300px;
    /* height: 1000px; */
    height: 190px;
    display: flex;
    /* justify-content: center; */
    align-items: left;
    flex-flow: column;
    text-align: left;
}

.article-link ul {
    list-style-type: none;
    display: flex;
}

.article-link hr{
    width: 100%;
    margin-top: auto;
}

.article-link strong{
    display: block;
    font-weight: bolder;
    margin-bottom: 15px;
    text-align: left;
}

.meet{
    margin-top: 70px;
    display: flex;
    flex-flow: column;
    align-items: left;
    text-align: left;
}

.meet-header{
    margin: 15px 15px 15px 0px;
}

.section-one-img{
    width: 100%;
    padding: 30px 0px 15px 0px;
}

.meet-writeup-p{
    margin: 15px 0;
}

.meet-buttons{
    display: flex;
    flex-flow: column;
}

.btn-two, .btn-three, .btn-four{
    margin: 5px 0px;
}

.btn-two{
    width: 130px;
    border: none;
    background: var(--BG-2);
    color: var(--FONT-COLOR-2)
}

.btn-three{
    width: 180px;
    background: var(--BG-1);
    color: var(--FONT-COLOR-1);
    border: 1px solid var(--SECONDARY-LINE);
    margin-bottom: 50px;
}

.meet-sale-cond-p{
    border-radius: 23px;
    border: 1px solid var(--SECONDARY-LINE);
    padding: 28px;
    margin: 10px 0px;
}

.meet-sale-cond-p1{
    background: var(--SECONDARY-1);
}

.meet-sale-cond-p2{
    background: transparent;
}

.section-two-largest, .section-two-recent{
    margin-top: 35px;
}

.btn-four{
    border: 1px solid var(--SECONDARY-LINE);
    background: transparent;
    width: 90px;
    margin: 25px 0px;
}

.largest-container, .recent-container{
    display: flex;
    overflow-x: auto;
    gap: 15px;
}

.largest-container::-webkit-scrollbar, .recent-container::-webkit-scrollbar{
    display: none;
}

.section-two-sub{
    white-space: nowrap;
    font-size: 0.75rem;
}

.section-two figcaption{
    margin: 17px 0px;
}

.section-two-sub-p{
    font-size: 0.8rem;
    margin: 10px 0px 0px 0px;
}


.section-three-how{
    margin: 35px 0px 0px 0px;
}

.section-three-how h2{
    margin-bottom: 30px;
}

.how-list{
    font-size: 0.75rem;
    margin-bottom: 30px;
    display: flex;
    justify-content: space-evenly;
    width: fit-content;
}

.counters{
    margin: 0px 30px 0px 30px;
    background: transparent;
    line-height: 1;
    width: 2rem;
    height: 2rem;
    place-items: center;
    display: inline-grid;
    aspect-ratio: 1;
    border: 1px solid var(--BG-2);
    border-radius: 50%;

}

.how-list h4{
    margin-bottom: 3px;
    font-size: 0.8rem;
}

.btn-five{
    background: transparent;
    border: 1px solid var(--SECONDARY-LINE);
    color: var(--FONT-COLOR-1);
    width: 160px;
    margin: 15px 0px 0px 0px;
}

.section-three-details{
    margin: 75px 0px 0px 0px;
}

.section-three-details h2{
    margin-bottom: 45px;
}

.details-list{
    margin-bottom: 45px;
}

.details-list p{
    font-size: 0.75rem;
}

.details-list h4{
    margin-bottom: 8px;
    font-size: 0.9rem;
}

footer{
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    gap: 12px;
    text-align: center;
    padding-bottom: 20px;
}

footer section{
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    gap: 18px;
}

footer p{
    font-size: 0.75rem;
}

footer strong{
    font-size: 1.5rem;
}





/* BIG SCREEN MEDIA QUERIES */
@media (min-width: 768px) {

    /* NAV BAR */
    header{
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-between;
        padding: 0.5%;
    }

    .menu-button{
        display: none;
    }


    .menu-icon{
        display: none;
    }

    nav{
        background-color: transparent;
        display: flex;
        transform-origin: none;
        animation: none;
        justify-content: right;
    }

    nav ul{
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        gap: 30px;
        
    }

    nav li{
        font-size: 1.3rem;
        margin: auto;
    }

    nav a{
        display: flex;
        text-align: center;
        width: 100%;
        /* padding: 0%; */
    }

    nav button{
        width: 80%;
        /* margin: auto; */
    }

    nav a:any-link{
        color: var(--SECONDARY-2);
        font-weight: bold;
        text-decoration: none;
    }

    nav button:focus, nav button:hover{
        transform: scale(1.1);
        transition: all 0.3s;
    }

    .btn-one{
        border: none;
        padding: 13px;
        width: 100%;
        /* margin: 2%; */
        display: block;
    }

    .hero-header{
        padding-top: 4%;
        padding-bottom: 4%;
        padding-right: 1%;
        padding-left: 1%;
    }

    .hero-text{
        margin-top: 0;
        margin-bottom: 0;
        margin-right: 5% ;
        margin-left: 5%;
        padding-bottom: 3%;
        padding-right: 3%;
        padding-left: 3%;
    }

    .hero-row img{
        height: auto;
        width: 170px;
    }

   .article-link-group{
        display: flex;
        flex-flow: row;
        /* gap: 1em; */
    }

    .article-link{
        height: 220px;
        width: 30%;
        max-width: 350px;
        margin: 4% 1%;
    }

    .meet{
        padding: 3%;
        display: grid;
        grid-template-columns: /* 2fr 2fr */ 50% 50%;
        gap: 2rem;
        /* flex-flow: column;
        align-items: left;
        text-align: left; */
    }

    .section-one-img{
        width: 92%;
        padding: 0px 0px 15px 0px;
        margin: 10px 0px 0px 0px;
    }   
    
    .meet-writeup-p{
        padding: 0px 15px 0px 0px;
    }

    .section-three-how{
        display: flex;
        justify-content: space-between;
    }

    .how{
        width: 50%;
    }

    .btn-five{
        width: 150px;
    }

    .details-list{
        display: flex;
        justify-content: space-between;
    }

    .details-list p{
        width: 50%; 
    }


    .footer-one{
        display: flex;
        flex-flow: row;
        justify-content: space-between;
        align-items: center;
        padding-top: 70px;
        padding-left: 30px;
        padding-right: 30px;
        /* gap: 150px; */
    }

    .footer-one-div{
        display: flex;
        flex-flow: row;
        gap: 45px;
        justify-content: space-between;
    }

    .footer-two{
        padding-bottom: 30px;
        display: flex;
        flex-flow: row;
        justify-content: center;
        gap: 12px;
    }
}

